--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tar = "0.4.40"
 tokio = { version = "1", features = ["full"] }
+toml = "0.8.10"
 url = "2.5.0"
 
