--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tar = "0.4.40"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.35.1", features = ["full"] }
 toml = "0.8.10"
 url = "2.5.0"
-
+llm-chain = {path = "/home/boboysdadda/Projects/llm-chain/crates/llm-chain"}
+llm-chain-openai = {path = "/home/boboysdadda/Projects/llm-chain/crates/llm-chain-openai"}
